--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -6,3 +6,20 @@ body {
 a {
   color: #00B7FF;
 }
+
+nav{
+  width: 100%;
+  height: 35px;
+}
+.nav-links{
+  float: right;
+}
+header{
+  text-align: center;
+}
+.per-Page-Stuff{
+  color: #7e7878;
+  
+}
+
+
