--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,9 +13,15 @@ nav {
   float: right; }
 
 header {
-  text-align: center; }
+  text-align: center;
+  border: solid 1px black; }
 
 .per-Page-Stuff {
   color: #7e7878; }
+
+section > aside {
+  width: 250px;
+  border: solid 1px black;
+  float: right; }
 
 /*# sourceMappingURL=style.css.map */
