--- a/views/user/userPersonalPage.hbs
+++ b/views/user/userPersonalPage.hbs
@@ -1,21 +1,26 @@
+<nav>
+  <div class="nav-links" >
+    <a href="/groups">Join a Cafe</a>
+    <a href="/logout">Logout</a>
+  </div>
+</nav>
 <header>
   <h1>Welcome</h1>
   <div>
-    {{!-- <h3>What's brewing in the community?</h3>
+    <h3>What's brewing in the community?</h3>
     <div class="per-Page-Stuff">
       New Stuff Here.
-    </div> --}}
+    </div>
   </div>
 </header>
 <section>
   <aside>
-    {{!-- <div>
+    <div>
       {{image}}
     </div>
     <h4>{{theUsername}}</h4>
     <p>Bio</p>
     <p>Other Stuff</p>
-     --}}
-
+    
   </aside>
 </section>
