--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,27 +1,62 @@
 body {
-  padding: 50px;
+  padding: 30px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
-  color: #00B7FF; }
+  color: #00B7FF;
+  text-decoration: none;
+  color: chocolate; }
+
+.welcome-screen {
+  width: 500px;
+  height: 300px;
+  text-align: center;
+  border: solid 1px burlywood; }
 
 nav {
   width: 100%;
-  height: 35px; }
+  height: 35px;
+  display: flex;
+  justify-content: space-between;
+  text-decoration-style: none; }
 
 .nav-links {
-  float: right; }
+  text-decoration-style: none; }
+
+nav > a > img {
+  width: 35px;
+  align-self: flex-start; }
 
 header {
   text-align: center;
   border: solid 1px black; }
 
 .per-Page-Stuff {
-  color: #7e7878; }
+  color: #7e7878;
+  vertical-align: bottom; }
 
-section > aside {
+section {
+  display: flex;
+  justify-content: space-between; }
+
+.user-section {
+  padding: 10px;
   width: 250px;
+  height: 450px;
   border: solid 1px black;
-  float: right; }
+  align-self: flex-end; }
+
+.user-section > h4 {
+  text-align: center; }
+
+.user-groups > h4 {
+  text-align: center; }
+
+.user-groups {
+  padding: 10px;
+  width: 250px;
+  height: 450px;
+  border: solid 1px black;
+  align-self: flex-start; }
 
 /*# sourceMappingURL=style.css.map */
