--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,20 +1,8 @@
-<nav>
-  <div class="nav-links">
-    <a href="/signup">Sign In Here</a>
-    <a href="/login">Log Back In</a>
-    <a href="/logout">logout</a>
-    
-    {{#if theUser}}
-      <span>
-        Hello {{theUser.username}}!
-      </span>
-    {{/if}}
 
-  </div>
-  
-</nav>
+<div class="welcome-screen">
 
-<h1>{{title}}</h1>
+  <h1>{{title}}</h1>
 
-<p>Welcome to {{title}}</p>
+  <p>Welcome to {{title}}</p>
 
+</div>
