--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
   </head>
   <body>
+    <nav>
+      <a href="/"><img src="/images/bean-icon.png" alt="The Social Bean"></a>
+      <span class="nav-links">
+      <a href="/signup">Sign In Here</a> |
+      <a href="/user/page/{{theUser._id}}"> User Page </a> |
+      <a href="/login">Log Back In</a> |
+      <a href="/logout">logout</a> |
+
+      {{#if theUser}}
+        <span>
+          Hello {{theUser.username}}!
+        </span>
+      {{/if}}
+
+  </span>
+  
+</nav>
 
     {{{body}}}
 
