--- a/views/user/signupPage.hbs
+++ b/views/user/signupPage.hbs
@@ -24,6 +24,7 @@
   <input type="password" name="repeatPassword">
 </div>
 
+{{!-- <button type="button" class="btn btn-primary">Let's Get Brewing!</button> --}}
 <button type="submit">Let's get Brewing!</button>
 
 </form>
