--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,4 +59,12 @@ section {
   border: solid 1px black;
   align-self: flex-start; }
 
+.edit-icon > a > img {
+  width: 10px; }
+
+.profile-form {
+  display: flex;
+  justify-content: center;
+  border: solid 1px #000; }
+
 /*# sourceMappingURL=style.css.map */
