--- a/views/user/signupPage.hbs
+++ b/views/user/signupPage.hbs
@@ -19,9 +19,9 @@
   <br>
   <input type="password" id="password" name="thePassword">
   <br>
-  <label>Repeat Password</label>
-  <br>
-  <input type="password" name="repeatPassword">
+  {{!-- <label>Repeat Password</label>
+  <br> --}}
+  {{!-- <input type="password" name="repeatPassword"> --}}
 </div>
 
 {{!-- <button type="button" class="btn btn-primary">Let's Get Brewing!</button> --}}
