--- a/views/group/groupPage.hbs
+++ b/views/group/groupPage.hbs
@@ -8,7 +8,7 @@
       <div>
         <img src="{{this.image}}" alt="">
         
-        <h3><a href={{this._id}}>{{this.name}}</a></h3>
+        <h3><a href='/group/{{this._id}}'>{{this.name}}</a></h3>
         <p>{{this.description}}</p>
      </div>
      <hr>
