--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,15 +1,18 @@
 body {
-  padding: 30px;
+  padding: 0;
+  margin: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
-  color: #00B7FF;
   text-decoration: none;
   color: chocolate; }
 
 .welcome-screen {
-  width: 500px;
-  height: 300px;
+  width: 100vw;
+  height: 100vh;
+  background-image: url(https://cdn.pixabay.com/photo/2017/06/02/11/49/still-life-2366084_960_720.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
   text-align: center;
   border: solid 1px burlywood; }
 
@@ -65,6 +68,18 @@ section {
 .profile-form {
   display: flex;
   justify-content: center;
-  border: solid 1px #000; }
+  border: solid 1px #000;
+  height: 100%; }
+
+.profile {
+  width: 100vw;
+  height: 100vh;
+  background: url(https://cdn.pixabay.com/photo/2015/05/31/10/54/coffee-791045_960_720.jpg);
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+page-content {
+  border: solid 1px black;
+  display: flex; }
 
 /*# sourceMappingURL=style.css.map */
