--- a/views/group/groupPage.hbs
+++ b/views/group/groupPage.hbs
@@ -4,6 +4,7 @@
   
 </div>
 <div>
+  <div><span id="numOfGroups"></span> Available Groups</div>
     {{#each listOfGroups}}
       <div>
         <img src="{{this.image}}" alt="">
