--- a/views/user/profileInfo.hbs
+++ b/views/user/profileInfo.hbs
@@ -1,7 +1,7 @@
 <h1>Let's get to know each other!</h1>
 <div class="profile-form">
 
-<form action="/user/{{}}" method="post" enctype="multipart/form-data">
+<form action="/user/profileInfo/{{theUser._id}}" method="post" enctype="multipart/form-data">
 
   <div>
   <input type="file" name="photo">
@@ -12,7 +12,7 @@
   </div>
 
   <div>
-    <label for="">Quote or Favorite Saying</label>
+    <label for="">Favorite Quote or Saying</label>
     <br>
     <textarea name="theQuote" id="quote" cols="20" rows="10"></textarea>
   </div>
@@ -25,7 +25,7 @@
 
   <div>
     <label for="">What's your favorite cup of coffee?</label>
-    <select name="coffee" required="true">
+    <select name="coffee" >
       <option value="null"></option>
       {{#each allCoffeeTypes}}
       <option value="{{this._id}}">{{this.name}}</option>
