--- a/views/group/oneGroup.hbs
+++ b/views/group/oneGroup.hbs
@@ -18,15 +18,25 @@
   </div>
   <div id="chatbox">
     <div class="col-xs-5">
-      <textarea id="message" rows="2" col="20" maxlength="50" placeholder="Say Hello"></textarea>
+      <textarea id="message" rows="4" col="20" maxlength="50" placeholder="Say Hello"></textarea>
     </div>
-
+    <br>
     <div id="send">
       <button id="sendChat" type="button">Send</button>
     </div>
+    <br>
+    <div id="chatArea">
 
     </div>
-  
+
+    </div>
+    <form action="" method="post" enctype="multipart/form-data">
+      <input type="file" name="photo">
+      <div class="content">
+        <p>Posts</p>
+        <button type="submit">submit</button>
+      </div>
+    </form>
 </div>
 
 
