--- a/views/user/profileInfo.hbs
+++ b/views/user/profileInfo.hbs
@@ -29,10 +29,11 @@
       <option value="null"></option>
       {{#each allCoffeeTypes}}
       <option value="{{this._id}}">{{this.name}}</option>
+      {{!-- <img src="{{this.image}}" alt="Your cup"> --}}
       {{/each}}
     </select>
   </div>
-  <button type="submit">EDIT</button>
+  <button type="submit">Add Change</button>
 
 </form>
 
