--- a/views/user/signupPage.hbs
+++ b/views/user/signupPage.hbs
@@ -13,15 +13,12 @@
 <div>
   <label for="username">Create a Username</label>
   <br>
-  <input type="text" id="username" name="theUsername" placeholder="Beany Baby">
+  <input type="text" id="username" name="theUsername" placeholder="Cracked Mug">
   <br>
   <label for="password">Create a Password</label>
   <br>
-  <input type="password" id="password" name="thePassword">
+  <input type="password" id="password" name="thePassword" placeholder="Still Good">
   <br>
-  {{!-- <label>Repeat Password</label>
-  <br> --}}
-  {{!-- <input type="password" name="repeatPassword"> --}}
 </div>
 
 {{!-- <button type="button" class="btn btn-primary">Let's Get Brewing!</button> --}}
