--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,17 +8,18 @@ a {
   color: chocolate; }
 
 .welcome-screen {
-  width: 100vw;
+  width: 98vw;
   height: 100vh;
   background-image: url(https://cdn.pixabay.com/photo/2017/06/02/11/49/still-life-2366084_960_720.jpg);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   text-align: center;
   border: solid 1px burlywood; }
 
 nav {
-  width: 100%;
-  height: 35px;
+  width: 98vw;
+  height: 5vh;
+  padding-top: 5px;
   display: flex;
   justify-content: space-between;
   text-decoration-style: none; }
@@ -62,6 +63,16 @@ section {
   border: solid 1px black;
   align-self: flex-start; }
 
+#chatbox {
+  width: 30%;
+  display: flex;
+  justify-content: center; }
+
+#chatArea {
+  width: 60%;
+  border: solid black 1px;
+  float: right; }
+
 .edit-icon > a > img {
   width: 10px; }
 
@@ -78,8 +89,12 @@ section {
   background-repeat: no-repeat;
   background-size: cover; }
 
-page-content {
+.page-content {
   border: solid 1px black;
-  display: flex; }
+  float: right; }
+
+.content {
+  width: 100vw;
+  float: left; }
 
 /*# sourceMappingURL=style.css.map */
