Editable User profile

--- a/views/user/userPersonalPage.hbs
+++ b/views/user/userPersonalPage.hbs
@@ -32,12 +32,13 @@
     </div>
     <h1>Hello <a href="/user/profileInfo/{{theUser._id}}">{{theUser.username}}</a>!</h1>
     {{!-- <span class="edit-icon"><img src="/images/edit-pencil-icon(2).jpg.png" alt=""></span> --}}
-    {{#each theUser.profile}}
-    <p>{{this.theBio}}</p>
-    <p><i>{{this.theQuote}}</i></p>
-    <p><b>{{this.theFavPlace}}</b></p>
-    <p>{{this.coffee}}</p>
-    {{/each}}
+    {{#if theUser.profile}}
+      <p>Bio: {{theUser.profile.bio}}</p>
+      <p>Favorite Saying: <i>{{theUser.profile.quote}}</i></p>
+      <p>Favorite Spot: <b>{{theUser.profile.fav}}</b></p>
+      <p>Preferred Cup of Joe: {{coffee.name}}</p>
+      <img src="{{theUser.profile.pic}}" alt="">
+    {{/if}}
   </aside>
 
 </section>
