--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -63,6 +63,10 @@ section {
   border: solid 1px black;
   align-self: flex-start; }
 
+.members {
+  display: flex;
+  justify-content: space-between; }
+
 #chatbox {
   width: 30%;
   display: flex;
