--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -8,6 +8,7 @@ a {
   text-decoration: none;
   color: chocolate;
 }
+
 .welcome-screen{
   width: 98vw;
   height: 100vh;
@@ -62,6 +63,12 @@ section{
   text-align: center;
 }
 
+.profile-pic{
+  width: 30px;
+  border: solid 5px rgb(165, 87, 42);
+  border-radius: 50% 50%;
+}
+
 .user-groups{
   padding: 10px;
   width: 250px;
@@ -102,10 +109,17 @@ section{
   background-repeat: no-repeat;
   background-size: cover;
 }
-.page-content{
-  border: solid 1px black;
-  float: right;
-  // display: flex;
+.group-content{
+  width: 100vw;
+  height: 100vh;
+  background: url(https://cdn.pixabay.com/photo/2014/12/15/17/18/cafe-569349__340.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  // border: solid 1px black;
+  // float: right;
+  display: flex;
+  flex-wrap: wrap;
+
 }
 .content{
   width: 100vw;
