--- a/views/group/newGroup.hbs
+++ b/views/group/newGroup.hbs
@@ -1,14 +1,23 @@
 <h2>Create a Cafe</h2>
 <p>Once you create your own cafe you will become the barista of that cafe. Now, Let's get Brewing!</p>
 
-<form action="/groups/create" method="post">
+<form action="/groups/create" method="post" enctype="multipart/form-data">
 
+  <div class="group-master">
+    <h1>Barista: {{theUser.name}}</h1>
+  </div>
+
+  <label>Set the scene for your Cafe:</label>
+  <input type="file" name="image">
+  <br>
   <label>Name</label>
+  <br>
   <input type="text" name="name">
   <br>
   <label>Description</label>
-  <textarea name="description" cols="30" rows="10" placeholder="Let the beans know they are welcome, the rules of your cafe, and to enjoy themselves."></textarea>
-
+  <br>
+  <textarea name="description" cols="20" rows="10" placeholder="Let the beans know they are welcome, the rules of your cafe, and to enjoy themselves."></textarea>
+  <br>
   {{!-- Time to Grind some Beans! --}}
   <button type="submit">Let's open up Shop!</button>
 </form>
