--- a/views/group/oneGroup.hbs
+++ b/views/group/oneGroup.hbs
@@ -1,42 +1,45 @@
+<div class="group-content">
 <header>
+
+  The Page Content
 
 </header>
 
-<div class="group-content">
-  The Page Content
-</div>
-
 <div class="members">
-  <div class="group-img">
-    <img src="/images/groupDefault.jpeg" alt="Cafe default image">
-  </div>
+
   <div class="group-user">
     {{#each users}}
+
      <span>{{this.image}}</span>
+
       {{this.username}}
+
     {{/each}}
   </div>
+
   <div id="chatbox">
-    <div class="col-xs-5">
+    <div class="message-area">
       <textarea id="message" rows="4" col="20" maxlength="50" placeholder="Say Hello"></textarea>
     </div>
+
     <br>
+
     <div id="send">
       <button id="sendChat" type="button">Send</button>
+    <div id="chatArea"></div>
     </div>
+
     <br>
-    <div id="chatArea">
-
     </div>
 
-    </div>
-    <form action="" method="post" enctype="multipart/form-data">
+    <form action="/group/{{_.id}}" method="post" enctype="multipart/form-data">
       <input type="file" name="photo">
       <div class="content">
         <p>Posts</p>
         <button type="submit">submit</button>
       </div>
     </form>
+
 </div>
 
 
@@ -53,3 +56,4 @@
 
 </div> --}}
 
+</div>
