--- a/views/user/userPersonalPage.hbs
+++ b/views/user/userPersonalPage.hbs
@@ -1,3 +1,14 @@
+  <header>
+    <div>
+      <h1>Welcome</h1>
+      <div>
+        <h3>What's brewing in the community?</h3>
+        <div class="per-Page-Stuff">
+          New Stuff Here.
+        </div>
+      </div>
+    </div>
+  </header>
 <div class="profile">
 <section>
   <aside class="user-groups">
@@ -10,17 +21,7 @@
       <p>Don't forget you can always join a new <b><a href="/groups">Cafe</a></b> anytime.</p>
     </div>
   </aside>
-  <aside>
-    <div>
-      <h1>Welcome</h1>
-      <div>
-        <h3>What's brewing in the community?</h3>
-        <div class="per-Page-Stuff">
-          New Stuff Here.
-        </div>
-      </div>
-    </div>
-  </aside>
+  <aside class="profile-content"></aside>
   <aside class="user-section">
     
     {{!-- <div>
