--- a/views/group/newGroup.hbs
+++ b/views/group/newGroup.hbs
@@ -8,7 +8,7 @@
   </div>
 
   <label>Set the scene for your Cafe:</label>
-  <input type="file" name="image">
+  <input type="file" name="photo">
   <br>
   <label>Name</label>
   <br>
