--- a/views/user/signupPage.hbs
+++ b/views/user/signupPage.hbs
@@ -1,4 +1,7 @@
-<h1>Become a bean in a our great big bag</h1>
+<div class="signUp-container">
+<div class="content-container">
+
+<h1>Bean Me up Pottie!</h1>
 
 <br>
 {{#if errorMessage}}
@@ -19,9 +22,11 @@
   <br>
   <input type="password" id="password" name="thePassword" placeholder="Still Good">
   <br>
-</div>
 
 {{!-- <button type="button" class="btn btn-primary">Let's Get Brewing!</button> --}}
 <button type="submit">Let's get Brewing!</button>
 
+</div>
 </form>
+</div>
+</div>
