--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   margin: 0 auto;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+  font: 14px Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; }
 
 a {
   text-decoration: none;
@@ -48,27 +48,64 @@ nav > a > img {
   width: 35px;
   align-self: flex-start; }
 
+.signUp-container {
+  width: 100vw;
+  height: 100vh;
+  background-image: url(https://images.unsplash.com/photo-1495474472287-4d71bcdd2085?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=217692eafea198d67733b9ee9c3f99d7&auto=format&fit=crop&w=500&q=60);
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+
+.content-container > form > div > label {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 20px; }
+
+.content-container > form > div > button {
+  background-color: coral;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 20px;
+  font-size: 20px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; }
+
+.content-container {
+  padding: 25px;
+  background-color: #fff;
+  font-size: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+
+.login-container {
+  width: 100vw;
+  height: 100vh;
+  background-image: url(https://cdn.pixabay.com/photo/2017/04/25/08/02/coffee-beans-2258839__340.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+
+.content-contain-login {
+  padding: 25px;
+  background-color: #fff;
+  font-size: 20px;
+  padding: 30px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+
 .nav-links {
   text-decoration-style: none; }
-
-header {
-  text-align: center;
-  border: solid 1px black; }
-
-.per-Page-Stuff {
-  color: #7e7878;
-  vertical-align: bottom; }
-
-section {
-  display: flex;
-  justify-content: space-between; }
-
-.user-groups {
-  padding: 10px;
-  width: 250px;
-  height: 450px;
-  border: solid 1px black;
-  align-self: flex-start; }
 
 .members {
   display: flex;
@@ -94,34 +131,66 @@ section {
   height: 100%; }
 
 .profile-pic {
-  width: 10px;
+  max-height: 50px;
   border: solid 5px #a5572a;
-  border-radius: 50% 50%; }
+  border-radius: 50% 50%;
+  display: block; }
 
 .profile {
-  width: 100vw;
+  width: 98vw;
   height: 100vh;
   background: url(https://cdn.pixabay.com/photo/2015/05/31/10/54/coffee-791045_960_720.jpg);
   background-repeat: no-repeat;
-  background-size: 100vw; }
+  background-size: cover; }
 
-@media screen and (min-width: 500px) {
-  .group-content, .profile-content, .user-section {
-    width: 100%; } }
+.max-min {
+  max-width: 30vw;
+  max-height: 30vw; }
+
+marquee {
+  font-size: 20px; }
+
+@media only screen and (max-width: 500px) {
+  .user-groups, .profile-content, .user-section {
+    display: flex;
+    flex-direction: column; } }
+
+header {
+  text-align: center;
+  border: solid 1px black;
+  height: 30vh; }
+
+.per-Page-Stuff {
+  color: #7e7878;
+  vertical-align: bottom; }
+
+section {
+  display: flex;
+  justify-content: space-between; }
+
+.user-groups {
+  padding: 10px;
+  width: 25vw;
+  height: 40vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
 
 .profile-content {
   padding: 10px;
-  width: 60vw;
-  display: flex;
-  flex-wrap: wrap; }
+  width: 50vw;
+  display: flex; }
 
 .user-section {
   padding: 10px;
-  width: 20vw;
-  border: solid 1px black;
+  width: 25vw;
+  text-shadow: #fff 2px 5px 6px;
+  border: solid 5px grey;
+  box-shadow: -5px 5px 50px #000;
   font-size: 1rem;
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  justify-content: center; }
 
 .user-section > h4 {
   text-align: center; }
@@ -130,7 +199,7 @@ section {
   text-align: center; }
 
 .group-content {
-  width: 20vw;
+  width: 25vw;
   background: url(https://cdn.pixabay.com/photo/2014/12/15/17/18/cafe-569349__340.jpg);
   background-repeat: no-repeat;
   background-size: cover;
