--- a/views/group/addpost.hbs
+++ b/views/group/addpost.hbs
@@ -2,9 +2,9 @@
 
 <form action="/user/page/{{theUser._id}}/post" method="post" enctype="multipart/form-data">
 
-      <label for="">Leave a post</label>
+      <label>Leave a post</label>
       <br>
-      <input type="file" name="aPost">
+      <input type="file" name="thePost">
       <br>
       <button>Submit</button>
     </form>
