--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -298,3 +298,8 @@ section{
   align-items: center;
   justify-content: center;  
 }
+#chatbox{
+  margin: 30px;
+  width: 30px;
+  height: 20px;
+}
