--- a/views/group/addpost.hbs
+++ b/views/group/addpost.hbs
@@ -1,6 +1,6 @@
 <div class="post-page">
 
-<form action="/user/page/{{theUser._id}}/post" method="post" enctype="multipart/form-data">
+<form action="/group/{{group._id}}/post" method="post" enctype="multipart/form-data">
 
       <label>Leave a post</label>
       <br>
