--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -248,4 +248,9 @@ section {
   align-items: center;
   justify-content: center; }
 
+#chatbox {
+  margin: 30px;
+  width: 30px;
+  height: 20px; }
+
 /*# sourceMappingURL=style.css.map */
