--- a/views/user/userPersonalPage.hbs
+++ b/views/user/userPersonalPage.hbs
@@ -32,9 +32,9 @@
 
   <aside class="user-section">
     
-    {{!-- <div>
+    <div>
       <img src="{{theUser.image}}" alt="You">
-    </div> --}}
+    </div>
     {{!-- <span class="edit-icon"><img src="/images/edit-pencil-icon(2).jpg.png" alt=""></span> --}}
     {{#if theUser.profile}}
       <img class="profile-pic" src="{{theUser.profile.pic}}" alt="">
