--- a/views/user/userPersonalPage.hbs
+++ b/views/user/userPersonalPage.hbs
@@ -31,7 +31,25 @@
   </aside>
 
   <aside class="user-section">
-   
+    
+    <div>
+      <img src="{{theUser.image}}" alt="You">
+    </div>
+    {{!-- <span class="edit-icon"><img src="/images/edit-pencil-icon(2).jpg.png" alt=""></span> --}}
+    {{#if theUser.profile}}
+      <img class="profile-pic" src="{{theUser.profile.pic}}" alt="">
+      <br>
+      <h1>Hello <a href="/user/page/{{theUser._id}}">{{theUser.username}}</a>!</h1>
+      <p>Bio: {{theUser.profile.bio}}</p>
+      <p>Favorite Saying: <i>{{theUser.profile.quote}}</i></p>
+      <p>Favorite Spot: <b>{{theUser.profile.fav}}</b></p>
+      <p>Preferred Cup of Joe: {{coffee.name}}</p>
+      {{#if theUser.coffee._id}}
+      <p>Description: {{coffee.description}}</p>
+      <p>Place of Origin: {{coffee.origin}}</p>
+      <p>Served: {{coffee.served}}</p>
+      {{/if}}
+    {{/if}}
   </aside>
 
 </section>
